--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,10 +1,19 @@
 !!! HTML
-%html
+%html{:lang => "en"}
   %head
+    %meta{:charset => "utf-8"}
+    %meta{:'http-equiv' => "X-UA-Compatible", :content => "IE=edge"}
+    %meta{:name => "viewport", :content => "width=device-width, initial-scale=1"}
+
     %title Acton Dog Park
     = stylesheet_link_tag    "application", :media => "all", "data-turbolinks-track" => true
+    = stylesheet_link_tag    "/assets/bootstrap.min"
     = javascript_include_tag "application",                  "data-turbolinks-track" => true
+    = javascript_include_tag "/assets/bootstrap.min"
     = csrf_meta_tags
 
   %body
-    = yield
+    .container
+      .header
+        = render :partial => "shared/nav"
+      = yield
