--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,9 +6,9 @@
     %meta{:name => "viewport", :content => "width=device-width, initial-scale=1"}
 
     %title Acton Dog Park
-    = stylesheet_link_tag    "application", :media => "all", "data-turbolinks-track" => true
+    = stylesheet_link_tag    "application", :media => "all"
     = stylesheet_link_tag    "/assets/bootstrap.min"
-    = javascript_include_tag "application",                  "data-turbolinks-track" => true
+    = javascript_include_tag "application"
     = javascript_include_tag "/assets/bootstrap.min"
     = csrf_meta_tags
 
