--- a/app/assets/stylesheets/site.css.scss
+++ b/app/assets/stylesheets/site.css.scss
@@ -1,3 +1,7 @@
-// Place all the styles related to the site controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+.jumbotron input{
+  display: block;
+  margin: 12px auto;
+}
+.jumbotron h1{
+  margin-bottom: 40px;
+}
