Devise for reals

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -14,4 +14,6 @@
     .container
       .header
         = render :partial => "shared/nav"
+        %p.notice= notice
+        %p.alert=  alert
       = yield
