--- a/app/views/shared/_nav.html.haml
+++ b/app/views/shared/_nav.html.haml
@@ -1,10 +1,13 @@
 %ul.nav.nav-pills.pull-right{:role => 'tablist'}
   %li{:role => "presentation", :class => (current_page?(index_path) ? "active" : "")}
     = link_to "Home", index_path
-  - if user_logged_in?
-    %li{:role => "presentation"} Log Out
+  - if user_signed_in?
+    %li{:role => "presentation"}
+      = link_to "Log Out", destroy_user_session_path, :method => :delete
   - else
-    %li{:role => "presentation"} Sign Up
-    %li{:role => "presentation"} Log In
+    %li{:role => "presentation"}
+      = link_to "Sign Up", new_user_registration_path
+    %li{:role => "presentation"}
+      = link_to "Log In", new_user_session_path
 
 %h3.text-muted Acton Dog Park
