--- a/app/views/site/index.html.haml
+++ b/app/views/site/index.html.haml
@@ -2,6 +2,7 @@
   %h1.bright Acton Dog Park
   - if user_signed_in?
     = form_tag(check_in_path) do
+      = text_field_tag 'name', nil, :class => (@error ? "error" : "")
       = submit_tag "Check In!",     :class => "btn btn-lg btn-success"
 
 .row.marketing
