Profile and about pages

--- a/app/assets/stylesheets/site.css.erb.scss
+++ b/app/assets/stylesheets/site.css.erb.scss
@@ -1,3 +1,7 @@
+.jumbotron.oreo{
+  height: 640px;
+  width: 427px;
+
 .jumbotron { 
   background: url('<%= asset_path("dog_park.jpg") %> ');
   background-position-y: -28px;
