--- a/app/assets/stylesheets/site.css.erb.scss
+++ b/app/assets/stylesheets/site.css.erb.scss
@@ -1,3 +1,18 @@
+.oreo {
+  background: url('<%= asset_path("better-oreo-small.jpg") %> ');
+  width: 240px;
+  height: 160px;
+  margin: 0 auto;
+}
+
+@media screen and ( min-width: 600px ) {
+  .oreo {
+    background: url('<%= asset_path("better-oreo.jpg") %> ');
+    width: 640px;
+    height: 427px;
+    margin: 0 auto;
+  }
+}
 .jumbotron {
   background: url('<%= asset_path("dog_park.jpg") %> ');
   background-position-y: -28px;
@@ -9,4 +24,12 @@
 .jumbotron h1.bright{
   margin-bottom: 40px;
   color: #EEE;
+}
+
+li.donate > a,
+li.donate > a:focus,
+li.donate > a:hover{
+  color: white;
+  background-color: #f0ad4e;
+  border-radius: 4px;
 }
