--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -14,6 +14,8 @@
     .container
       .header
         = render :partial => "shared/nav"
-        %p.notice= notice
-        %p.alert=  alert
+        - if alert
+          %p.alert.alert-info=  alert
+        - if notice
+          %p.alert.alert-warning= notice
       = yield
