--- a/app/assets/stylesheets/site.css.erb.scss
+++ b/app/assets/stylesheets/site.css.erb.scss
@@ -1,3 +1,29 @@
+#dog-list {
+  background: rgba(255,255,255,0.8);
+  width: 200px;
+  border: 2px solid #888;
+  border-radius: 15px;
+  margin: 0 auto;
+}
+
+#dog-list ul {
+  display: inline;
+  text-align: center;
+}
+
+#dog-list li {
+  list-style-type: none;
+  display: block;
+  text-align: center;
+}
+
+#dog-list label, #dog-list input {
+  display: inline;
+  text-align: center;
+}
+
+
+
 .oreo {
   background: url('<%= asset_path("better-oreo-small.jpg") %> ');
   width: 240px;
@@ -16,6 +42,7 @@
 .jumbotron {
   background: url('<%= asset_path("dog_park.jpg") %> ');
   background-position-y: -28px;
+  background-repeat: repeat-x;
 }
 .jumbotron input{
   display: block;
