add site name to qr code page

--- a/app/views/site/qr_codes.html.haml
+++ b/app/views/site/qr_codes.html.haml
@@ -1,5 +1,6 @@
 .row.marketing
   .col-lg-12
+    %h2 Acton Dog Park Check-in App: http://www.actondogpark.net
 
     %div{:style => "width: 45%; float: left"}
       %h4 Sign Up!
