changed qr flyer header

--- a/app/views/site/qr_codes.html.haml
+++ b/app/views/site/qr_codes.html.haml
@@ -1,6 +1,9 @@
 .row.marketing
   .col-lg-12
-    %h2 Acton Dog Park Check-in App: http://www.actondogpark.net
+    %h2{:style => "text-align: center;"}
+      Use our check-in app to see who's at the dog park!
+      %br
+      http://www.actondogpark.net
 
     %div{:style => "width: 45%; float: left"}
       %h4 Sign Up!
