added mailto qr code

--- a/app/views/site/qr_codes.html.haml
+++ b/app/views/site/qr_codes.html.haml
@@ -15,6 +15,10 @@
 
     %br{:style => "clear: both"}
 
-    %div
+    %div{:style => "width: 45%; float: left"}
       %h4 About Us!
       = image_tag "qrcode-about.png"
+
+    %div{:style => "width: 45%; float: right"}
+      %h4 Email Feedback! rz+actondogpark@eqdw.net
+      = image_tag "qrcode-email.png"
