--- a/app/views/site/qr_codes.html.haml
+++ b/app/views/site/qr_codes.html.haml
@@ -1,6 +1,6 @@
 .row.marketing
-  .col-lg-12
-    %h2{:style => "text-align: center;"}
+  .col-lg-12{:style => "text-align: center;"}
+    %h2
       Use our check-in app to see who's at the dog park!
       %br
       http://www.actondogpark.net
